--- a/app/all-items.html
+++ b/app/all-items.html
@@ -36,7 +36,7 @@
                     <span><span>Need help?</span> Talk to an expert: <a href="tel:+61383766284">+61 3 8376 6284</a></span>
                 </div>
                 <!-- /.need-help -->
-                <div class="user-controls d-flex flex-wrap align-items-center justify-content-around justify-content-xl-start">
+                <div class="user-controls d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <div class="dropdown-item">
                         <div class="dropdown-control d-flex" id="dropdownMenuLink" data-toggle="dropdown">
                             <i class="far fa-bell mx-auto my-auto"></i>
@@ -234,7 +234,10 @@
                         <!-- /.dropdown-menu -->
                     </div>
                     <!-- /.user-dropdown-control -->
-                    <button class="btn small-btn bg-red">Logout</button>
+                    <div class="header-btn-wrap">
+                        <button class="btn small-btn bg-red">Logout</button>
+                    </div>
+                    <!-- /.header-btn-wrap -->
                 </div>
                 <!-- /.user-controls -->
             </div>
@@ -262,6 +265,7 @@
         <!-- /.bottom-header -->
     </header>
     <!-- /#header -->
+
     <main id="main">
         <div class="inner small-inner">
             <div class="container">
@@ -958,6 +962,7 @@
         <!-- /.content-wrapper -->
     </main>
     <!-- /#main -->
+
     <footer id="footer" class="bg-dark-blue">
         <div class="footer-top">
             <div class="container">
@@ -1109,10 +1114,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <!-- Bootstrap js -->
     <script src="js/bootstrap.min.js"></script>
-    <!-- Slicknav -->
-    <script src="js/jquery.slicknav.min.js"></script>
     <!-- Ion range slider -->
     <script src="js/ion.rangeSlider.min.js"></script>
+    <!-- Slicknav -->
+    <script src="js/jquery.slicknav.min.js"></script>
     <!-- Aside js -->
     <script src="js/aside.js"></script>
     <!-- Init plugins -->
