--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <!-- Bootstrap grid -->
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <!-- Slicknav styles -->
+    <link rel="stylesheet" href="css/slicknav.css">
     <!-- Ion range styles -->
     <link rel="stylesheet" href="css/ion.rangeSlider.css">
     <link rel="stylesheet" href="css/ion.rangeSlider.skinNice.css">
@@ -25,7 +27,7 @@
 <body>
     <header id="header">
         <div class="top-header bg-white">
-            <div class="container d-flex align-items-center">
+            <div class="container d-flex align-items-center flex-wrap">
                 <div class="logo">
                     <a href="index.html">
                         <img src="img/logo.png" alt="">
@@ -36,7 +38,7 @@
                     <span><span>Need help?</span> Talk to an expert: <a href="tel:+61383766284">+61 3 8376 6284</a></span>
                 </div>
                 <!-- /.need-help -->
-                <div class="user-controls d-flex align-items-center">
+                <div class="user-controls d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <div class="dropdown-item">
                         <div class="dropdown-control d-flex" id="dropdownMenuLink" data-toggle="dropdown">
                             <i class="fas fa-shopping-cart mx-auto my-auto"></i>
@@ -86,8 +88,11 @@
                         <!-- dropdown-menu -->
                     </div>
                     <!-- /.dropdown-item -->
-                    <button class="btn small-btn bg-green">Login</button>
-                    <button class="btn small-btn bg-red">Register</button>
+                    <div class="header-btn-wrap">
+                        <button class="btn small-btn bg-green">Login</button>
+                        <button class="btn small-btn bg-red">Register</button>
+                    </div>
+                    <!-- /.header-btn-wrap -->
                 </div>
                 <!-- /.user-controls -->
             </div>
@@ -1497,11 +1502,12 @@
         <!-- /.tutorials -->
     </main>
     <!-- /#main -->
+
     <footer id="footer" class="bg-dark-blue">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-xl-3 col-md-6">
                         <div class="footer-item">
                             <div class="footer-title">
                                 <span>About Company</span>
@@ -1524,8 +1530,8 @@
                         </div>
                         <!-- /.footer-item -->
                     </div>
-                    <!-- /.col-md-3 -->
-                    <div class="col-md-3">
+                    <!-- /.col-xl-3 -->
+                    <div class="col-xl-3 col-md-6">
                         <div class="footer-item footer-list">
                             <div class="footer-title">
                                 <span>Join Our Community</span>
@@ -1557,8 +1563,8 @@
                         </div>
                         <!-- /.footer-item -->
                     </div>
-                    <!-- /.col-md-3 -->
-                    <div class="col-md-3">
+                    <!-- /.col-xl-3 -->
+                    <div class="col-xl-3 col-md-6">
                         <div class="footer-item footer-list">
                             <div class="footer-title">
                                 <span>Need Help?</span>
@@ -1590,8 +1596,8 @@
                         </div>
                         <!-- /.footer-item -->
                     </div>
-                    <!-- /.col-md-3 -->
-                    <div class="col-md-3">
+                    <!-- /.col-xl-3 -->
+                    <div class="col-xl-3 col-md-6">
                         <div class="footer-item">
                             <div class="footer-title">
                                 <span>Follow Us On</span>
@@ -1622,7 +1628,7 @@
                         </div>
                         <!-- /.footer-item -->
                     </div>
-                    <!-- /.col-md-3 -->
+                    <!-- /.col-xl-3 -->
                 </div>
                 <!-- /.row -->
             </div>
@@ -1630,10 +1636,13 @@
         </div>
         <!-- /.footer-top -->
         <div class="footer-bottom">
-            <div class="copy text-center">
-                <span>&copy; 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.</span>
+            <div class="container">
+                <div class="copy text-center">
+                    <span>&copy; 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.</span>
+                </div>
+                <!-- /.copy -->
             </div>
-            <!-- /.copy -->
+            <!-- /.container -->
         </div>
         <!-- /.footer-bottom -->
     </footer>
@@ -1647,6 +1656,8 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- Ion range slider -->
     <script src="js/ion.rangeSlider.min.js"></script>
+    <!-- Slicknav -->
+    <script src="js/jquery.slicknav.min.js"></script>
     <!-- Slick slider -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <!-- Init plugins -->
