--- a/app/upload-products.html
+++ b/app/upload-products.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <!-- Bootstrap grid -->
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <!-- Slicknav styles -->
+    <link rel="stylesheet" href="css/slicknav.css">
     <!-- Ion range styles -->
     <link rel="stylesheet" href="css/ion.rangeSlider.css">
     <link rel="stylesheet" href="css/ion.rangeSlider.skinNice.css">
@@ -26,7 +28,7 @@
 <body>
     <header id="header">
         <div class="top-header bg-white">
-            <div class="container d-flex align-items-center">
+            <div class="container d-flex align-items-center flex-wrap">
                 <div class="logo">
                     <a href="index.html">
                         <img src="img/logo.png" alt="">
@@ -37,7 +39,7 @@
                     <span><span>Need help?</span> Talk to an expert: <a href="tel:+61383766284">+61 3 8376 6284</a></span>
                 </div>
                 <!-- /.need-help -->
-                <div class="user-controls d-flex align-items-center">
+                <div class="user-controls d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <div class="dropdown-item">
                         <div class="dropdown-control d-flex" id="dropdownMenuLink" data-toggle="dropdown">
                             <i class="far fa-bell mx-auto my-auto"></i>
@@ -235,7 +237,10 @@
                         <!-- /.dropdown-menu -->
                     </div>
                     <!-- /.user-dropdown-control -->
-                    <button class="btn small-btn bg-red">Logout</button>
+                    <div class="header-btn-wrap">
+                        <button class="btn small-btn bg-red">Logout</button>
+                    </div>
+                    <!-- /.header-btn-wrap -->
                 </div>
                 <!-- /.user-controls -->
             </div>
@@ -245,16 +250,16 @@
         <div class="bottom-header bg-dark-blue">
             <div class="container">
                 <nav class="header-nav">
-                   <a href="index.html">Home</a>
-                   <a href="#">About</a>
-                   <a href="#">WordPress</a>
-                   <a href="#">Joomla</a>
-                   <a href="#">PSD</a>
-                   <a href="#">Plugins</a>
-                   <a href="#">Components</a>
-                   <a href="#">Pages</a>
-                   <a href="#">Contact</a>
-                   <a href="#">Help</a>
+                    <a href="index.html">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">WordPress</a>
+                    <a href="#">Joomla</a>
+                    <a href="#">PSD</a>
+                    <a href="#">Plugins</a>
+                    <a href="#">Components</a>
+                    <a href="#">Pages</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Help</a>
                 </nav>
                 <!-- /.header-nav -->
             </div>
@@ -263,6 +268,7 @@
         <!-- /.bottom-header -->
     </header>
     <!-- /#header -->
+
     <main id="main">
         <div class="inner small-inner">
             <div class="container">
@@ -436,11 +442,12 @@
         <!-- /.content-wrapper -->
     </main>
     <!-- /#main -->
+
     <footer id="footer" class="bg-dark-blue">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-xl-3 col-md-6">
                         <div class="footer-item">
                             <div class="footer-title">
                                 <span>About Company</span>
@@ -463,8 +470,8 @@
                         </div>
                         <!-- /.footer-item -->
                     </div>
-                    <!-- /.col-md-3 -->
-                    <div class="col-md-3">
+                    <!-- /.col-xl-3 -->
+                    <div class="col-xl-3 col-md-6">
                         <div class="footer-item footer-list">
                             <div class="footer-title">
                                 <span>Join Our Community</span>
@@ -496,8 +503,8 @@
                         </div>
                         <!-- /.footer-item -->
                     </div>
-                    <!-- /.col-md-3 -->
-                    <div class="col-md-3">
+                    <!-- /.col-xl-3 -->
+                    <div class="col-xl-3 col-md-6">
                         <div class="footer-item footer-list">
                             <div class="footer-title">
                                 <span>Need Help?</span>
@@ -529,8 +536,8 @@
                         </div>
                         <!-- /.footer-item -->
                     </div>
-                    <!-- /.col-md-3 -->
-                    <div class="col-md-3">
+                    <!-- /.col-xl-3 -->
+                    <div class="col-xl-3 col-md-6">
                         <div class="footer-item">
                             <div class="footer-title">
                                 <span>Follow Us On</span>
@@ -561,7 +568,7 @@
                         </div>
                         <!-- /.footer-item -->
                     </div>
-                    <!-- /.col-md-3 -->
+                    <!-- /.col-xl-3 -->
                 </div>
                 <!-- /.row -->
             </div>
@@ -569,10 +576,13 @@
         </div>
         <!-- /.footer-top -->
         <div class="footer-bottom">
-            <div class="copy text-center">
-                <span>&copy; 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.</span>
+            <div class="container">
+                <div class="copy text-center">
+                    <span>&copy; 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.</span>
+                </div>
+                <!-- /.copy -->
             </div>
-            <!-- /.copy -->
+            <!-- /.container -->
         </div>
         <!-- /.footer-bottom -->
     </footer>
@@ -586,6 +596,8 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- Ion range slider -->
     <script src="js/ion.rangeSlider.min.js"></script>
+    <!-- Slicknav -->
+    <script src="js/jquery.slicknav.min.js"></script>
     <!-- jQuery form styler -->
     <script src="js/jquery.formstyler.min.js"></script>
     <!-- Init plugins -->
