add style for product-details adaptive

--- a/app/product-details.html
+++ b/app/product-details.html
@@ -300,8 +300,8 @@
                 <div class="overlay"></div>
                 <!-- /.overlay -->
 
-                <div class="row">
-                    <div class="col-12 col-lg-9">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-xl-9">
                         <div class="mobile-aside-toggle">
                             <i class="fab fa-elementor"></i>
                         </div>
@@ -316,10 +316,13 @@
                                 <p class="description-text">Bmply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived noning essentially unchanged. </p>
                             </div>
                             <!-- /.product-description -->
-                            <div class="product-links d-flex">
-                                <a href="#" class="btn large-btn bg-red">Live Preview</a>
-                                <a href="#" class="btn large-btn bg-marengo">Screenshots</a>
-                                <a href="#" class="btn large-btn bg-green">Documentation</a>
+                            <div class="product-links d-flex flex-wrap justify-content-center justify-content-md-between">
+                                <div class="product-btn-wrap d-flex">
+                                    <a href="#" class="btn large-btn bg-red">Live Preview</a>
+                                    <a href="#" class="btn large-btn bg-marengo">Screenshots</a>
+                                    <a href="#" class="btn large-btn bg-green">Documentation</a>
+                                </div>
+                                <!-- /.product-btn-wrap -->
                                 <nav class="product-social ml-auto">
                                     <a href="#" class="bg-violet"><i class="fab fa-facebook-f"></i></a>
                                     <a href="#" class="bg-ligth-blue"><i class="fab fa-twitter"></i></a>
@@ -330,7 +333,7 @@
                             </div>
                             <!-- /.product-links -->
                             <div class="product-tabs bg-white border-grey">
-                                <ul class="nav nav-tabs d-flex" id="myTab" role="tablist">
+                                <ul class="nav nav-tabs d-flex flex-wrap" id="myTab" role="tablist">
                                     <li class="nav-item">
                                       <a class="nav-link active" id="features-tab" data-toggle="tab" href="#features" role="tab" aria-controls="features" aria-selected="true">Item Features</a>
                                     </li>
@@ -346,7 +349,7 @@
                                 </ul>
                                 <!-- /.nav-tabs -->
                                 <div class="tab-content" id="myTabContent">
-                                    <div class="tab-pane fade show active" id="features" role="tabpanel" aria-labelledby="features-tab">
+                                    <div class="tab-pane fade show active flex-wrap" id="features" role="tabpanel" aria-labelledby="features-tab">
                                         <ul class="default-chevron-list">
                                             <li>
                                                 <i class="fas fa-chevron-right"></i>
@@ -387,7 +390,7 @@
                                         <!-- /.default-chevron-list -->
                                     </div>
                                     <!-- /.tab-pane -->
-                                    <div class="tab-pane fade" id="comments" role="tabpanel" aria-labelledby="comments-tab">
+                                    <div class="tab-pane fade flex-wrap" id="comments" role="tabpanel" aria-labelledby="comments-tab">
                                         <ul class="default-chevron-list">
                                             <li>
                                                 <i class="fas fa-chevron-right"></i>
@@ -424,7 +427,7 @@
                                         <!-- /.default-chevron-list -->
                                     </div>
                                     <!-- /.tab-pane -->
-                                    <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
+                                    <div class="tab-pane fade flex-wrap" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
                                         <ul class="default-chevron-list">
                                             <li>
                                                 <i class="fas fa-chevron-right"></i>
@@ -457,7 +460,7 @@
                                         <!-- /.default-chevron-list -->
                                     </div>
                                     <!-- /.tab-pane -->
-                                    <div class="tab-pane fade" id="support" role="tabpanel" aria-labelledby="support-tab">
+                                    <div class="tab-pane fade flex-wrap" id="support" role="tabpanel" aria-labelledby="support-tab">
                                         <ul class="default-chevron-list">
                                             <li>
                                                 <i class="fas fa-chevron-right"></i>
@@ -515,7 +518,7 @@
                             </div>
                             <!-- /.more-product -->
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 col-md-6">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -536,7 +539,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 col-md-6">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -557,7 +560,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 col-md-6">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -578,7 +581,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 col-md-6">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -599,7 +602,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 col-md-6">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -620,7 +623,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 col-md-6">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -647,7 +650,7 @@
                         <!-- /.product-info-wrap -->
                     </div>
                     <!-- /.col-lg-9 -->
-                    <div class="col-12 col-md-6 col-lg-3 mobile-aside right">
+                    <div class="col-12 col-sm-7 col-md-5 col-xl-3 mobile-aside right">
                         <button class="close-mobile-aside"><i class="fas fa-times"></i></button>
                         <aside id="aside">
                             <div class="aside-section product-price-section bg-white border-grey">
