--- a/app/all-items.html
+++ b/app/all-items.html
@@ -36,7 +36,7 @@
                     <span><span>Need help?</span> Talk to an expert: <a href="tel:+61383766284">+61 3 8376 6284</a></span>
                 </div>
                 <!-- /.need-help -->
-                <div class="user-controls d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <div class="user-controls d-flex flex-wrap align-items-center justify-content-center justify-content-center">
                     <div class="dropdown-item">
                         <div class="dropdown-control d-flex" id="dropdownMenuLink" data-toggle="dropdown">
                             <i class="far fa-bell mx-auto my-auto"></i>
@@ -297,8 +297,8 @@
                 <div class="overlay"></div>
                 <!-- /.overlay -->
 
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-3 mobile-aside left">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-sm-7 col-md-5 col-xl-3 mobile-aside left">
                         <button class="close-mobile-aside"><i class="fas fa-times"></i></button>
                         <aside id="aside">
                             <div class="aside-section bg-white border-grey">
@@ -455,8 +455,8 @@
                         </aside>
                         <!-- /#aside -->
                     </div>
-                    <!-- /.col-lg-3 -->
-                    <div class="col-lg-9 col-12">
+                    <!-- /.col-xl-3 -->
+                    <div class="col-xl-9 col-12">
                         <div class="view-controls bg-white border-grey d-flex">
                             <div class="mobile-aside-toggle">
                                 <i class="fab fa-elementor"></i>
@@ -476,7 +476,7 @@
                         </div>
                         <!-- /.view-controls -->
                         <div class="row">
-                            <div class="col-xl-4 col-md-6">
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -513,8 +513,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -551,8 +551,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -589,8 +589,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -627,8 +627,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -665,8 +665,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -703,8 +703,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -741,8 +741,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -779,8 +779,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -817,8 +817,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -855,8 +855,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -893,8 +893,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
-                            <div class="col-xl-4 col-md-6">
+                            <!-- /.col-lg-4 -->
+                            <div class="col-lg-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -931,7 +931,7 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-xl-4 -->
+                            <!-- /.col-lg-4 -->
                         </div>
                         <!-- /.row -->
                         <nav class="pagination-wrap">
@@ -953,7 +953,7 @@
                         </nav>
                         <!-- /.pagination-wrap -->
                     </div>
-                    <!-- /.col-lg-9 -->
+                    <!-- /.col-xl-9 -->
                 </div>
                 <!-- /.row -->
             </div>
